Squashed 'plugins/weather_routing_pi/' changes from 30df98d..75f62ea
75f62ea don't blindly set debug mode
77fe2e7 backport from ocpn_draw WIP v1.5
74945f0 c++11 isnan define
f903a90 use the right time interval when computing speed
e91da11 tweak again speed governor in slow end
6bc7199 tweak speed governor in slow end
4382ea3 disable MaxCourseAngle and MaxDivertedCourse angle in slow start
73a4b2b don't test for land or boundaries after end point
b1dfca7 tweak propagate again
16987ab tweak slow end start
81b082f increase angular resolution if boundary/land 2
5a96b7a hack for get first crossing not closest, should be faster
e67c665 use correct number for rounding on slow start exit
da735df increase angular resolution if boundary/land
4addf8d slow end
7d94738 always test boundary points, they don't have distance
585caa1 don't search for boundaries after end point
82ab089 enter boundary distance and right time interval for plot
f5eacd2 use the right time interval for end propagation
a067792 slow start
acb51c1 Revert "use last position if can't reach with n-1"
732badb start with a small step
0354a16 don't subsearch if boundary is an inclusion
d5c35dd add some head to boundary entry detection
602edcf try smaller angular step if boundary
a599533 use last position if can't reach with n-1
79f3961 request DR to cache its boundaries, unfinished
deeafa3 temporary add new opencpn.lib
21ae5ab initialised W VW, otherwise function can return without setting them
77c8d8c merge O grib record
214bf27 backport from grib_pi
dcec211 backport GribRecord stuff from OpenCPN
54e2859 backport timeline changes from oCPN
df13e66 bump version
1b4b86e improve boatdialog and crossover chart rendering
7389fdc remove duplicated polars, now renamed to Example
e110497 fix mark rendering
c7393a0 add example boat with overlapping polars
6ea8911 slight rendering improvements
7258849 disable optimize tacking by default
1349852 Merge pull request #162 from did-g/barbUI
64be16e Update Routing UI source with

--- a/po/el_GR.po
+++ b/po/el_GR.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-02-15 09:58-0300\n"
-"PO-Revision-Date: 2018-02-15 13:05-0500\n"
+"PO-Revision-Date: 2018-03-03 08:24-0500\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Greek\n"
 "Language: el_GR\n"
@@ -83,7 +83,7 @@ msgstr "Επιλέξτε Αρχείο πολικών δεδομένων"
 
 #: src/BoatDialog.cpp:1026
 msgid "wind speed out of range"
-msgstr ""
+msgstr "ταχύτητα ανέμου εκτός ορίων"
 
 #: src/BoatDialog.cpp:1028
 #, c-format
@@ -603,7 +603,7 @@ msgstr "Απέτυχε η αποθήκευση του αρχείου xml: "
 
 #: src/WeatherRouting.cpp:1570
 msgid "Invalid Start/End "
-msgstr ""
+msgstr "Μη έγκυρη έναρξη/λήξη "
 
 #: src/WeatherRouting.cpp:1573
 msgid "Computing..."
@@ -624,11 +624,11 @@ msgstr "Δεν υπάρχουν δεδομένα"
 
 #: src/WeatherRouting.cpp:1593
 msgid "Land"
-msgstr ""
+msgstr "Ξηρά"
 
 #: src/WeatherRouting.cpp:1597
 msgid "Boundary"
-msgstr ""
+msgstr "Όριο"
 
 #: src/WeatherRouting.cpp:1601
 msgid "Failed"
@@ -660,19 +660,19 @@ msgstr "Σημείο για Weather Route"
 
 #: src/WeatherRouting.cpp:1842
 msgid "Weather Route Destination"
-msgstr ""
+msgstr "Προορισμός Weather Routing"
 
 #: src/WeatherRouting.cpp:1867
 msgid "Zero Time Step"
-msgstr ""
+msgstr "Μηδενικό χρονικό βήμα"
 
 #: src/WeatherRouting.cpp:1875
 msgid "inside exclusion boundary"
-msgstr ""
+msgstr "εντός αποκλεισμένης περιοχής"
 
 #: src/WeatherRouting.cpp:1882
 msgid "lies outside of Max Latitude constraint"
-msgstr ""
+msgstr "είναι εκτός μεγίστου επιτρεπτού γ. πλάτους"
 
 #: src/WeatherRoutingUI.cpp:29 src/WeatherRoutingUI.cpp:2021
 msgid "Positions"
