--- a/po/pl_PL.po
+++ b/po/pl_PL.po
@@ -3,14 +3,14 @@ msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-02-15 09:58-0300\n"
-"PO-Revision-Date: 2018-02-15 13:06-0500\n"
+"PO-Revision-Date: 2018-03-03 08:25-0500\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Polish\n"
 "Language: pl_PL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=4; plural=((n == 1) ? 0 : ((n%10 >= 2 && n%10 <=4 && (n%100 < 12 || n%100 > 14)) ? 1 : ((n%10 == 0 || n%10 == 1 || (n%10 >= 5 && n%10 <=9)) || (n%100 >= 12 && n%100 <= 14)) ? 2 : 3));\n"
 "X-Generator: crowdin.com\n"
 "X-Crowdin-Project: opencpn\n"
 "X-Crowdin-Language: pl\n"
@@ -47,7 +47,7 @@ msgstr "Statek"
 
 #: src/BoatDialog.cpp:71
 msgid "Filename"
-msgstr ""
+msgstr "Nazwa pliku"
 
 #: src/BoatDialog.cpp:106 src/BoatDialog.cpp:678 src/BoatDialog.cpp:728
 #: src/BoatDialog.cpp:824 src/BoatDialog.cpp:830 src/BoatDialog.cpp:884
@@ -71,7 +71,7 @@ msgstr "Wybierz łódź"
 
 #: src/BoatDialog.cpp:823
 msgid "Failed to save"
-msgstr ""
+msgstr "Nie udało się zapisać"
 
 #: src/BoatDialog.cpp:829
 msgid "Failed to revert"
@@ -83,7 +83,7 @@ msgstr "Wybierz plik Polar"
 
 #: src/BoatDialog.cpp:1026
 msgid "wind speed out of range"
-msgstr ""
+msgstr "prędkość wiatru poza zakresem"
 
 #: src/BoatDialog.cpp:1028
 #, c-format
@@ -155,7 +155,7 @@ msgstr ""
 
 #: src/EditPolarDialog.cpp:50
 msgid "Boat Speed"
-msgstr ""
+msgstr "Prędkość jednostki"
 
 #: src/EditPolarDialog.cpp:51
 msgid "Sailboat Transform ETA"
@@ -547,7 +547,7 @@ msgstr ""
 
 #: src/WeatherRouting.cpp:430
 msgid "Wind"
-msgstr ""
+msgstr "Wiatr"
 
 #: src/WeatherRouting.cpp:431
 msgid "Current"
@@ -624,7 +624,7 @@ msgstr "Brak danych"
 
 #: src/WeatherRouting.cpp:1593
 msgid "Land"
-msgstr ""
+msgstr "Ląd"
 
 #: src/WeatherRouting.cpp:1597
 msgid "Boundary"
@@ -792,7 +792,7 @@ msgstr "&Wykres"
 
 #: src/WeatherRoutingUI.cpp:201
 msgid "&Cursor Position"
-msgstr ""
+msgstr "&Pozycja kursora"
 
 #: src/WeatherRoutingUI.cpp:204
 msgid "&View"
@@ -1070,7 +1070,7 @@ msgstr "Czas halsowania"
 
 #: src/WeatherRoutingUI.cpp:1028
 msgid "Seconds"
-msgstr ""
+msgstr "Sekund"
 
 #: src/WeatherRoutingUI.cpp:1042
 msgid "Courses (relative to true wind)"
