--- a/README
+++ b/README
@@ -26,3 +26,4 @@ License
 =======
 The plugin code is licensed under the terms of the GPL v3 or, at your will, later.
 
+Part of the icons made by Kirill Kazachek (https://www.flaticon.com/authors/kirill-kazachek) from Flaticon (https://www.flaticon.com/) and is licensed under CC BY 3.0 (http://creativecommons.org/licenses/by/3.0
